@@ -57,6 +57,7 @@ Additions:
      - Add Cserve2 scalecache support
      - Add evas_object_image_source_clip_set()/get()
      - Use eina_file_virtualize() for evas_object_image_memfile_set().
+     - Change mapping policy for image loader.
     * Ecore_X:
      - Add window profile support.
        ECORE_X_ATOM_E_WINDOW_PROFILE_SUPPORTED
