@@ -1,6 +1,11 @@
+2013-08-02  Cedric Bail
+
+        * Evas: change mapping policy for image loader (RANDOM during header,
+        SEQUENTIAL or WILLNEED during pixels reading).
+
 2013-08-01  Cedric Bail
 
-	* Edje: faster load time for Edje_Object using Evas_Object_Textblocks and many styles.
+        * Edje: faster load time for Edje_Object using Evas_Object_Textblocks and many styles.
 
 2013-07-31  Carsten Haitzler (The Rasterman)
 
